<resources>
    <string name="app_name">00 - 영상으로 배우는 영어</string>

    <string name="menu_home">홈</string>
    <string name="menu_wordbook">단어장</string>
    <string name="menu_favorites">보관함</string>

    <string name="menu_open_youtube">유튜브에서 열기</string>
    <string name="menu_share">공유</string>
    <string name="menu_hide">차단</string>
    <string name="menu_add_favorites">즐겨찾기에 추가</string>
    <string name="menu_delete_favorites">즐겨찾기에서 삭제</string>
    <string name="menu_delete_hide">차단 목록에서 삭제</string>
    <string name="menu_play">재생</string>
    <string name="menu_delete">삭제</string>
    <string name="menu_fix_title">제목 수정</string>

    <string name="message_hiding">해당 영상을 차단하였습니다</string>

    <string name="error_video_loading">영상 로딩중 오류가 발생하여 유튜브 플레이어를 통해 영상을 재생합니다\n템포, 음정 조절이 제한됩니다</string>
    <string name="error_empty">공백없이 입력해주세요</string>
    <string name="error_start">앱 실행중 오류가 발생했습니다\n다시 실행시켜주세요</string>

    <string name="hint_search">검색어를 입력해주세요</string>
    <string name="hint_korean">의미</string>
    <string name="hint_english">영단어</string>
    <string name="hint_title">제목</string>

    <string name="content_add_word">단어장에 추가</string>
    <string name="content_check">확인</string>

    <string name="text_add_favorites_item">즐겨찾기 추가</string>
    <string name="text_add_favorites">즐겨찾기 목록 추가</string>
    <string name="text_fix_favorites">즐겨찾기 목록 수정</string>
    <string name="text_favorites_list">즐겨찾기 목록</string>
    <string name="text_hide_list">차단 목록</string>
    <string name="text_recent">최근 기록</string>
    <string name="text_check">확인</string>
</resources>
