<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="kr.hs.dgsw.videoenglish_android.ui.player.PlayerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_view">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/nanum_square_round"
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="15dp"
                    app:mutableText="@{viewModel.title}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                    <LinearLayout
                        android:id="@+id/btn_open_youtube"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:tint="@color/colorSoftGrey"
                            android:src="@drawable/ic_open_in_new" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorSoftGrey"
                            android:text="@string/menu_open_youtube" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_share"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:tint="@color/colorSoftGrey"
                            android:src="@drawable/ic_share" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorSoftGrey"
                            android:text="@string/menu_share" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_add_favorites"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:tint="@color/colorSoftGrey"
                            android:src="@drawable/ic_favorites" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorSoftGrey"
                            android:text="@string/menu_add_favorites" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:padding="10dp">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_english"
                        android:textColorHint="@color/colorSoftGrey"
                        android:textColor="@color/colorWhite"
                        android:backgroundTint="@color/colorWhite"
                        android:layout_marginEnd="5dp"
                        android:text="@={viewModel.english}" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_korean"
                        android:textColorHint="@color/colorSoftGrey"
                        android:textColor="@color/colorWhite"
                        android:backgroundTint="@color/colorWhite"
                        android:layout_marginStart="5dp"
                        android:text="@={viewModel.korean}" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/colorGrey"
                    android:textSize="16sp"
                    android:text="@string/content_add_word"
                    android:onClick="@{() -> viewModel.onClickAddWord()}"
                    android:layout_gravity="end"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    android:layout_marginTop="15dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:adapter="@{viewModel.videoListAdapter}"
                    tools:listitem="@layout/item_video_horizontal" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <kr.co.prnd.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>