<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="kr.hs.dgsw.videoenglish_android.ui.favorites.FavoritesBottomSheetViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/background_bottom_line">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:singleLine="true"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/nanum_square_round"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:text="@string/text_add_favorites_item" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:tint="@color/colorAccent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_plus"
                android:onClick="@{() -> viewModel.onClickAddFavorites()}"/>

            <TextView
                android:id="@+id/btn_add_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:singleLine="true"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/nanum_square_round"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:text="@string/text_add_favorites"
                android:onClick="@{() -> viewModel.onClickAddFavorites()}"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:adapter="@{viewModel.favoritesCheckListAdapter}"
                tools:listitem="@layout/item_favorites_check" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="@drawable/background_top_line"
                android:onClick="@{() -> viewModel.onClickClose()}">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_check"
                    android:tint="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/nanum_square_round"
                    android:textColor="@color/colorWhite"
                    android:text="@string/text_check" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>