<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="kr.hs.dgsw.videoenglish_android.ui.locker.LockerViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingBottom="?actionBarSize"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:visibility="@{viewModel.isEmptyRecentList ? View.GONE : View.VISIBLE}">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:onClick="@{() -> viewModel.onClickRecentList()}">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/nanum_square_round"
                        android:text="@string/text_recent"/>

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_marginStart="7dp"
                        android:layout_gravity="center"
                        android:tint="@color/colorWhite"
                        android:src="@drawable/ic_chevron"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:adapter="@{viewModel.recentListAdapter}"
                    tools:listitem="@layout/item_recent" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrey"
                android:visibility="@{viewModel.isEmptyRecentList ? View.GONE : View.VISIBLE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/nanum_square_round"
                        android:text="@string/text_favorites_list"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="@{() -> viewModel.onClickAddFavorites()}">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="7.5dp"
                        android:tint="@color/colorAccent"
                        android:src="@drawable/ic_plus"
                        android:layout_marginStart="22.5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="15dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/nanum_square_round"
                        android:text="@string/text_add_favorites"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:adapter="@{viewModel.favoritesListAdapter}"
                    tools:listitem="@layout/item_favorites" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>